--- a/app/src/main/res/layout/fragment_first_screen.xml
+++ b/app/src/main/res/layout/fragment_first_screen.xml
@@ -6,14 +6,19 @@
     android:layout_height="match_parent"
     android:background="@color/dark_grey"
     android:padding="@dimen/box_inset_layout_padding"
-    tools:context=".MainActivity"
+    tools:context=".FirstScreenFragment"
     tools:deviceIds="wear">
 
-    <fragment
-        android:id="@+id/fragment4"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/nav_graph" />
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/btn_next_screen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="next" />
+    </FrameLayout>
 </androidx.wear.widget.BoxInsetLayout>
