--- a/app/src/main/res/layout/fragment_ambient_screen.xml
+++ b/app/src/main/res/layout/fragment_ambient_screen.xml
@@ -3,15 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.AuthScreenFragment">
+    tools:context=".Fragments.AmbientScreenFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:text="auth screen"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textStyle="bold" />
+        android:gravity="center"
+        android:text="Ambient Mode!" />
 
 </FrameLayout>
