--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,11 @@
         android:id="@+id/homeScreenFragment"
         android:name="com.example.spotifywearapp.Fragments.HomeScreenFragment"
         android:label="fragment_home_screen"
-        tools:layout="@layout/fragment_home_screen" />
+        tools:layout="@layout/fragment_home_screen" >
+        <action
+            android:id="@+id/action_homeScreenFragment_to_ambientScreenFragment"
+            app:destination="@id/ambientScreenFragment" />
+    </fragment>
     <fragment
         android:id="@+id/firstScreenFragment"
         android:name="com.example.spotifywearapp.Fragments.FirstScreenFragment"
@@ -19,4 +23,9 @@
             android:id="@+id/action_firstScreenFragment_to_homeScreenFragment"
             app:destination="@id/homeScreenFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/ambientScreenFragment"
+        android:name="com.example.spotifywearapp.Fragments.AmbientScreenFragment"
+        android:label="fragment_ambient_screen"
+        tools:layout="@layout/fragment_ambient_screen" />
 </navigation>
