Excluded the FirstScreenFragment from navigate to the ambient screen (and pop back to itself, accordingly).

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,6 +22,9 @@
         <action
             android:id="@+id/action_firstScreenFragment_to_homeScreenFragment"
             app:destination="@id/homeScreenFragment" />
+        <action
+            android:id="@+id/action_firstScreenFragment_to_ambientScreenFragment"
+            app:destination="@id/ambientScreenFragment" />
     </fragment>
     <fragment
         android:id="@+id/ambientScreenFragment"
