--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -16,38 +16,28 @@
             android:gravity="center"
             android:orientation="vertical">
 
+            <ImageView
+                android:id="@+id/track_image"
+                android:layout_width="wrap_content"
+                android:layout_height="114dp"
+                tools:src="@tools:sample/avatars" />
+
             <TextView
                 android:id="@+id/track_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="28sp" />
 
             <TextView
                 android:id="@+id/artist_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/album_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="TextView" />
-
-            <ImageView
-                android:id="@+id/track_image"
-                android:layout_width="81dp"
-                android:layout_height="34dp"
-                tools:src="@tools:sample/avatars" />
-
-            <Button
-                android:id="@+id/get_track_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="GET TRACK" />
         </LinearLayout>
     </FrameLayout>
 </androidx.wear.widget.BoxInsetLayout>
