--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -16,11 +16,27 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/track_image"
-                android:layout_width="wrap_content"
-                android:layout_height="114dp"
-                tools:src="@tools:sample/avatars" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="116dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/track_image"
+                    android:layout_width="141dp"
+                    android:layout_height="89dp"
+                    android:layout_gravity="bottom"
+                    tools:src="@tools:sample/avatars" />
+
+                <Button
+                    android:id="@+id/addToFav"
+                    android:layout_width="wrap_content"
+                    android:layout_height="83dp"
+                    android:layout_gravity="bottom"
+                    android:layout_weight="1"
+                    android:text="Button" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/track_name"
