--- a/app/src/main/res/layout/fragment_ambient_screen.xml
+++ b/app/src/main/res/layout/fragment_ambient_screen.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="Ambient Mode!" />
+        android:text="Ambient Mode!"
+        android:textSize="24sp" />
 
 </FrameLayout>
