--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -20,23 +20,28 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="116dp"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/track_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="110dp"
+                    android:layout_width="113dp"
+                    android:layout_height="109dp"
                     android:layout_gravity="bottom"
+                    android:background="#9FA29F9F"
                     tools:src="@tools:sample/avatars" />
 
             </LinearLayout>
 
             <TextView
                 android:id="@+id/track_name"
-                android:layout_width="153dp"
+                android:layout_width="165dp"
                 android:layout_height="wrap_content"
+                android:layout_marginVertical="5dp"
                 android:autoText="false"
+                android:background="#9FA29F9F"
                 android:ellipsize="marquee"
+                android:gravity="center"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="true"
                 android:singleLine="true"
@@ -46,8 +51,9 @@
 
             <TextView
                 android:id="@+id/artist_name"
-                android:layout_width="wrap_content"
+                android:layout_width="104dp"
                 android:layout_height="wrap_content"
+                android:background="#9FA29F9F"
                 android:gravity="center"
                 android:maxLines="1"
                 android:scrollHorizontally="true"
