--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -19,20 +19,31 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="116dp"
+                android:layout_height="wrap_content"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/current_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="2dp"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp" />
 
                 <com.facebook.shimmer.ShimmerFrameLayout
                     android:id="@+id/shimmer_image_view"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    >
+                    android:layout_height="wrap_content">
 
                     <ImageView
                         android:id="@+id/track_image"
-                        android:layout_width="113dp"
-                        android:layout_height="109dp"
+                        android:layout_width="117dp"
+                        android:layout_height="114dp"
                         android:layout_gravity="bottom"
                         android:background="#9FA29F9F"
                         tools:src="@tools:sample/avatars" />
@@ -52,7 +63,6 @@
                     android:layout_width="165dp"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="5dp"
-                    android:autoText="false"
                     android:background="#9FA29F9F"
                     android:ellipsize="marquee"
                     android:gravity="center"
@@ -60,7 +70,7 @@
                     android:scrollHorizontally="true"
                     android:singleLine="true"
                     android:textColor="@color/complicationDrawable_textColor"
-                    android:textSize="24sp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
             </com.facebook.shimmer.ShimmerFrameLayout>
@@ -76,10 +86,11 @@
                     android:layout_width="104dp"
                     android:layout_height="wrap_content"
                     android:background="#9FA29F9F"
+                    android:ellipsize="marquee"
                     android:gravity="center"
-                    android:maxLines="1"
                     android:scrollHorizontally="true"
-                    android:textSize="18sp" />
+                    android:singleLine="true"
+                    android:textSize="14sp" />
 
             </com.facebook.shimmer.ShimmerFrameLayout>
 
