--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -55,8 +55,7 @@
             <com.facebook.shimmer.ShimmerFrameLayout
                 android:id="@+id/shimmer_track_view"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/track_name"
@@ -78,8 +77,7 @@
             <com.facebook.shimmer.ShimmerFrameLayout
                 android:id="@+id/shimmer_artist_view"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/artist_name"
