--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeScreenFragment"
-        android:name="com.example.spotifywearapp.Fragments.HomeScreenFragment"
+        android:name="com.example.spotifywearapp.fragments.HomeScreenFragment"
         android:label="fragment_home_screen"
         tools:layout="@layout/fragment_home_screen" >
         <action
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/firstScreenFragment"
-        android:name="com.example.spotifywearapp.Fragments.FirstScreenFragment"
+        android:name="com.example.spotifywearapp.fragments.FirstScreenFragment"
         android:label="fragment_first_screen"
         tools:layout="@layout/fragment_first_screen" >
         <action
@@ -31,12 +31,12 @@
     </fragment>
     <fragment
         android:id="@+id/ambientScreenFragment"
-        android:name="com.example.spotifywearapp.Fragments.AmbientScreenFragment"
+        android:name="com.example.spotifywearapp.fragments.AmbientScreenFragment"
         android:label="fragment_ambient_screen"
         tools:layout="@layout/fragment_ambient_screen" />
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.example.spotifywearapp.Fragments.SettingsFragment"
+        android:name="com.example.spotifywearapp.fragments.SettingsFragment"
         android:label="settings_fragment"
         tools:layout="@layout/settings_fragment" >
         <action
