--- a/app/src/main/res/layout/fragment_playlist_list.xml
+++ b/app/src/main/res/layout/fragment_playlist_list.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.wear.widget.BoxInsetLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
-    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/list"
-        android:name="com.example.spotifywearapp.PlaylistsFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="5dp"
-        app:boxedEdges="all"
-        app:layoutManager="LinearLayoutManager"
-        tools:context=".fragments.PlaylistsFragment"
-        tools:listitem="@layout/fragment_playlist" />
+    android:background="#000000">
+
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/listofplaylist"
+    android:name="com.example.spotifywearapp.PlaylistsFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:boxedEdges="all"
+    app:layoutManager="LinearLayoutManager"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:context=".fragments.PlaylistsFragment"
+    tools:listitem="@layout/fragment_playlist" />
+
 </androidx.wear.widget.BoxInsetLayout>
