--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,6 +19,9 @@
         <action
             android:id="@+id/action_homeScreenFragment_to_playlistsFragment"
             app:destination="@id/playlistsFragment" />
+        <action
+            android:id="@+id/action_homeScreenFragment_to_toPlaylistFragment"
+            app:destination="@id/toPlaylistFragment" />
     </fragment>
     <fragment
         android:id="@+id/firstScreenFragment"
@@ -53,6 +56,15 @@
         tools:layout="@layout/fragment_playlist_list" >
         <action
             android:id="@+id/action_playlistsFragment_to_homeScreenFragment"
+            app:destination="@id/homeScreenFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/toPlaylistFragment"
+        android:name="com.example.spotifywearapp.fragments.ToPlaylistsFragment"
+        android:label="dummy_item_list"
+        tools:layout="@layout/dummy_item_list" >
+        <action
+            android:id="@+id/action_toPlaylistFragment_to_homeScreenFragment"
             app:destination="@id/homeScreenFragment" />
     </fragment>
 </navigation>
