--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -16,8 +16,8 @@
             android:id="@+id/shuffle_mode"
             android:layout_width="58dp"
             android:layout_height="53dp"
-            android:layout_marginStart="52dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="76dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,8 +26,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="68dp"
+            android:layout_marginTop="92dp"
             android:text="shuffle"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/shuffle_mode"
